<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView
    android:scrollbars="none"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        tools:context=".ui.homeView.fragment.HomeFragment">

        <ImageView
            android:id="@+id/btn_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="@+id/textView7"
            app:srcCompat="@drawable/ic_outline_notifications_24" />

        <ImageView
            android:id="@+id/btn_dropDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="@+id/textView7"
            app:srcCompat="@drawable/ic_baseline_keyboard_arrow_down_24" />

        <ImageView
            android:id="@+id/iv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            app:backgroundTint="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintEnd_toStartOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="@+id/textView7"
            app:srcCompat="@drawable/ic_outline_location_on_24" />

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintEnd_toStartOf="@+id/textView7"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="@+id/textView7"
            app:srcCompat="@drawable/ic_logo_red_bg" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/miami"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/btn_notification"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/iv_logo"
            app:layout_constraintTop_toTopOf="@+id/guideline6" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

        <TextView
            android:id="@+id/tv_headingMain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/montserrat_extra_bold"
            android:text="@string/let_s_eat_quality_food_128523"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/circle"
            android:backgroundTint="@color/grey_50"
            app:queryHint="@string/search_query_hint"
            app:defaultQueryHint="@string/search_query_hint"
            android:queryHint="@string/search_query_hint"
            android:iconifiedByDefault="false"
            android:queryBackground="@android:color/transparent"
            app:layout_constraintEnd_toStartOf="@+id/btn_filter"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/tv_headingMain" />

        <ImageButton
            android:id="@+id/btn_filter"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/circle"
            android:backgroundTint="@color/grayish_blue_900"
            android:paddingStart="10dp"
            android:scaleType="center"
            android:src="@drawable/ic_equalizer"
            app:layout_constraintBottom_toBottomOf="@+id/searchView"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/searchView" />

        <TextView
            android:id="@+id/tv_categories"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/categories"
            android:textColor="@color/grayish_blue_900"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_seeAllCategories"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/searchView" />

        <TextView
            android:id="@+id/tv_seeAllCategories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/see_all"
            android:textColor="@color/red_600"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_categories"
            app:layout_constraintEnd_toStartOf="@+id/btn_seeAllCategories"
            app:layout_constraintTop_toTopOf="@+id/tv_categories" />

        <ImageButton
            android:id="@+id/btn_seeAllCategories"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:rotation="270"
            android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
            app:layout_constraintBottom_toBottomOf="@+id/tv_seeAllCategories"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/tv_seeAllCategories" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_categories"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/tv_categories" />

        <TextView
            android:id="@+id/tv_featuredRestaurant"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/featured_restaurant"
            android:textColor="@color/grayish_blue_900"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_seeAllFeaturedRestaurant"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView_categories" />

        <TextView
            android:id="@+id/tv_seeAllFeaturedRestaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/see_all"
            android:textColor="@color/red_600"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_featuredRestaurant"
            app:layout_constraintEnd_toStartOf="@+id/btn_seeAllFeaturedRestaurant"
            app:layout_constraintTop_toTopOf="@+id/tv_featuredRestaurant"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/btn_seeAllFeaturedRestaurant"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:backgroundTint="@color/red_600"
            android:rotation="270"
            android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
            app:layout_constraintBottom_toBottomOf="@+id/tv_seeAllFeaturedRestaurant"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/tv_seeAllFeaturedRestaurant" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_featuredRestaurant"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline7"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/tv_featuredRestaurant" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.92" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
        app:fabCradleMargin="0dp"
        android:gravity="center"
        app:fabCradleRoundedCornerRadius="0dp"
        android:layout_gravity="bottom">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:padding="0dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            app:itemIconTint="@color/bottom_nav_item_color"
            app:itemRippleColor="@android:color/transparent"
            app:itemTextColor="@color/bottom_nav_item_color"
            android:background="@android:color/transparent"
            app:labelVisibilityMode="labeled"
            android:layout_gravity="center"
            app:menu="@menu/bottom_nav_items" />

    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
         android:layout_width="60dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/red_600"
        android:padding="0dp"
        app:fabCustomSize="60dp"
        app:maxImageSize="40dp"
        android:contentDescription="@string/fab"
        android:src="@drawable/ic_food_icon"
        app:tint="@color/white"
        app:backgroundTint="@color/white"
        app:borderWidth="5dp"
        app:layout_anchor="@id/bottomAppBar" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>

